se agregan test a la fachada de usuarios y se modifica logica para validar string